@@ -1,5 +1,6 @@
 1.3.2 - TBD
     * The launcher now remembers Java options changed in the launch settings
+    * More descriptive error message when failing to open a texture pack
 
 1.3.1 - 2014-09-01
     * Fixed bug in the .hdr texture loader that crashed all render threads
